--- a/index.html
+++ b/index.html
@@ -347,13 +347,13 @@
             </div>
             <div class="social-footer">
                 <a href="#" class="social-item">
-                    <img class="logo-f" width="3%" src="./assets/Logos/logo_sayna_white.png" alt="" />
+                    <img class="logo-f" width="3%" src="./assets/Logos/logo_sayna_white.png" alt=""/>
                     <img class="logo-f" width="2%" src="./assets/Logos/icon_x.png" alt="" />
                     <img class="logo-f" width="3%" src="./assets/Logos/icon_DC.png" alt="" />
                     <a class="social-item" href=""><img class="logo-f" src="./assets/Logos/icon_facebook.png"
                             alt="" /></a>
-                    <a class="social-item" href=""><img class="logo-f" src="./assets/Logos/icon_ig.png" alt="" /></a>
-                    <a class="social-item" href=""><img class="logo-f" src="./assets/Logos/icon_tw.png" alt="" /></a>
+                    <a class="social-item" href=""><img class="logo-f" src="./assets/Logos/icon_ig.png" alt="" ></a>
+                    <a class="social-item" href=""><img class="logo-f" src="./assets/Logos/icon_tw.png" alt=""/></a>
                 </a>
             </div>
         </div>
